# TravelCompanionFastAPI

./: LICENSE  README.md  pyproject.toml
travelcompanion/: alembic.ini  config.py  main.py
travelcompanion/alembic/: env.py
travelcompanion/models/: __init__.py  base.py  database.py  models.py
travelcompanion/places/api_connector/: get_places_connector.py
travelcompanion/places/providers/: api_utils.py  foursquare_places.py  geoapify_places.py  geography_places.py  open_street_map.py  openstreetmap_provider.py
travelcompanion/schemas/: place.py
